# veedo-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: test.yaml
scripts/: build_bench_wasm.sh  run_bench_wasm.sh
veedo-codegen/: Cargo.toml
veedo-codegen/src/: lib.rs
veedo-core/: Cargo.toml
veedo-core/benches/: compute_100k_iterations.rs  inverse_100k_iterations.rs
veedo-core/src/: compute_multi_thread.rs  compute_single_thread.rs  constants.rs  lib.rs  utils.rs
veedo-ff/: Cargo.toml
veedo-ff/src/: lib.rs
