[package]
name = "veedo-codegen"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
ruint = { version = "1.12.3", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
syn = { version = "2.0.77", default-features = false }
veedo-ff = { version = "0.1.0", path = "../veedo-ff" }
